Closed Bug 1060963 Opened 11 years ago Closed 11 years ago

Fix D2D 1.1 backend's DrawSurface implementation

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

Attachments

(1 file)

Right now D2D 1.1's DrawSurface implementation doesn't deal correctly with an adjusted (possibly scaled) source rectangle. This patch fixes that.
Attachment #8481972 - Flags: review?(jmuizelaar)
Blocks: 902952
Attachment #8481972 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: