Bug 1060963: Correctly deal with adjusted Source rectangle in DrawTargetD2D1::DrawSurface. r=jrmuizel